<resources>
    <string name="app_name">Analisis_Quimico_2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_registrarse">Registrarse</string>
    <string name="title_activity_registrarse2">Registrarse2</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Ventas</string>
    <string name="menu_slideshow">Aguas Residuales</string>
    <string name="menu_Bebidas">Bebidas</string>
    <string name="menu_Alimentos">Alimentos</string>


    <string name="default_web_client_id" translatable="false">694130067438-1j00198drhhifbjedjtj9t9u90sugbla.apps.googleusercontent.com</string>
</resources>